@@ -1,3 +1,10 @@
+2006-10-23  Dirk Göttel <dgoettel@freenet.de>
+
+	* data/gnome-commander.ebuild:
+	Updated ebuild file for gentoo systems
+	* data/libiptcdata.ebuild:
+        Added ebuild file for gentoo systems
+
 2006-10-23  Piotr Eljasiak  <epiotr@use.pl>
 
 	* configure.in: Bumped version to 1.2.2
